syntax = "proto3";

package protos;

import "protos/user.proto";
import "protos/post.proto";
import "protos/common.proto";

service UserService {
    rpc Register (ReqRegistration) returns (ResRegistration) {
    }
    rpc Login (ReqLogin) returns (ResLogin) {
    }
    rpc Profile (ReqProfile) returns (ResProfile) {
    }
    rpc Update (ReqUpdateUser) returns (ResUpdateUser) {
    }
    rpc ChangePassword (ReqChangePassword) returns (ResChangePassword) {
    }
    rpc ChangeStatus (ReqChangeUserStatus) returns (ResChangeUserStatus) {
    }
    rpc ChangeType (ReqChangeUserType) returns (ResChangeUserType) {
    }
    rpc Logout (ReqUserLogout) returns (ResUserLogout) {
    }
    rpc ResetPasswordRequest (ReqResetPasswordRequest) returns (ResResetPasswordRequest) {
    }
    rpc ResetPassword (ReqResetPassword) returns (ResResetPassword) {
    }
}

service PostService {
    rpc PostCreate (ReqPostCreate) returns (ResPost) {
    }
    rpc PostUpdate (ReqPostUpdate) returns (ResPost) {
    }
    rpc PostDelete (GetByID) returns (ResPostSuccess) {
    }
    rpc ChangeStatus (ReqPostChangeStatus) returns (ResPost) {
    }
    rpc PostView (GetByID) returns (ResPost) {
    }
    rpc PostFavourite (GetByID) returns (ResPost) {
    }
}
